--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "core-js": "^3.8.3",
+    "element-plus": "^2.6.1",
+    "lodash.uniqueid": "^4.0.1",
     "vue": "^3.2.13"
   },
   "devDependencies": {
